<resources>
    <string name="app_name">speakUp</string>


    <!--String For FirstActivity -->
    <string name="welcome">Welcome!</string>
    <string name="description">SpeakUp! merupakan aplikasi konseling dan
Lapor tindak kekerasan dan Pelecehan Seksual
di sekitar Kampus Universitas Negeri Semarang
    </string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backarrow">backarrow</string>
    <string name="imglogo">imgLogo</string>
    <string name="create_your_account">Create your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="Login">Login</string>
    <string name="tvcreate_your_account">Create your Account</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_tv">Sign Up</string>
    <string name="or_login_with">Or login with</string>
    <string name="selected_photo">Selected Photo</string>


</resources>