<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.SignUpFragment"
    android:background="@drawable/background"
    android:padding="10dp">



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/imglogo"
        android:src="@drawable/speakuplogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logintoYourAccount"
        style="@style/tvlight"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvcreate_your_account"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        style="@style/TextInputLayoutStyle"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/Red"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintoYourAccount"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textEmailAddress"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfUsername"
        style="@style/TextInputLayoutStyle"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/Red"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfEmail"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="312dp"
        android:layout_height="55dp"
        app:hintTextColor="@color/white"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/Red"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfUsername"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/btnStyle"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_style"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>