<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.LoginFragment"
    >

    <data>
        <variable
            name="viewmodel"
            type="com.adhimbagas.speakup.ui.auth.AuthViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/imglogo"
        android:src="@drawable/speakuplogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logintoYourAccount"
        style="@style/tvlight"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/login_to_your_account"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        style="@style/TextInputLayoutStyle"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/darkTheme"
        app:boxStrokeErrorColor="@color/Red"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintoYourAccount"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textEmailAddress"
            android:textSize="12sp"
            android:text="@={viewmodel.email}"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/Red"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfEmail"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:text="@={viewmodel.password}"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/btnStyle"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_style"
        android:text="@string/Login"
        android:onClick="@{() -> viewmodel.loginEmail()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPassword" />

    <TextView
        android:id="@+id/textView4"
        style="@style/tvlight"
        android:layout_marginTop="16dp"
        android:text="@string/or_login_with"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/btn_login_google"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="@string/google_sign_in"
        app:isDarkTheme="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        style="@style/tvlight"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:text="Don't have an Account ?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_google" />

    <TextView
        android:id="@+id/tvSignUp"
        style="@style/tvlight"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_tv"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_google" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>




</layout>
